--- a/tars_assistant/config.yml
+++ b/tars_assistant/config.yml
@@ -24,6 +24,10 @@ pipeline:
 - name: EntitySynonymMapper
 - name: ResponseSelector
   epochs: 100
+- name: FallbackClassifier
+  threshold: 0.3
+  ambiguity_threshold: 0.1
+  epochs: 100
 
 policies:
 - name: MemoizationPolicy
@@ -31,4 +35,8 @@ policies:
   max_history: 5
   epochs: 100
 - name: RulePolicy
+  core_fallback_threshold: 0.3
+  core_fallback_action_name: "action_generate_with_ollama"
+  enable_fallback_prediction: true
+
 assistant_id: 20250603-194416-exhaustive-chick
