Implementazione pagina Log azioni Rasa.

--- a/tars_assistant/Dockerfile
+++ b/tars_assistant/Dockerfile
@@ -1,7 +1,10 @@
 FROM rasa/rasa-sdk:3.6.0
 
 USER root
+
+RUN apt-get update && apt-get install -y curl iputils-ping && rm -rf /var/lib/apt/lists/*
 RUN pip install requests
+
 USER 1001
 
-CMD ["start"]
+CMD ["start", "--actions", "actions.actions", "--port", "5055"]
