--- a/GuiRasa/GuiRasa.csproj
+++ b/GuiRasa/GuiRasa.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Net.Http.Json" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\" />
+  </ItemGroup>
+
 </Project>
